# video_manage

./: .gitignore  FFMPEG_QUICKSTART.md  FFMPEG_SETUP.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cursor/rules/: project-guidelines.mdc
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: README.md
src-tauri/src/: main.rs
src/components/: ContextMenu.vue  InputDialog.vue  LeftSidebar.vue  RightPlayer.vue  SettingsModal.vue  Toolbar.vue  VideoGrid.vue  context.ts
src/stores/: browser.ts  projects.ts
src/utils/: fs.ts  thumbnail.ts
